 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-2341: Need better documentation on Pig/HBase integration (jthakrar and billgraham via billgraham)

PIG-3075: Allow AvroStorage STORE Operations To Use Schema Specified By URI (nwhite via cheolsoo)

PIG-3062: Change HBaseStorage to permit overriding pushProjection (billgraham)

PIG-3016: Modernize more tests (jcoveney via cheolsoo)

PIG-2582: Store size in bytes (not mbytes) in ResourceStatistics (prkommireddi via billgraham)

PIG-3006: Modernize a chunk of the tests (jcoveney via cheolsoo)

PIG-2997: Provide a convenience constructor on PigServer that accepts Configuration (prkommireddi via rohini)

PIG-2933: HBaseStorage is using setScannerCaching which is deprecated (prkommireddi via rohini)

PIG-2881: Add SUBTRACT eval function (jocosti via cheolsoo)

PIG-3004: Improve exceptions messages when a RuntimeException is raised in Physical Operators (julien)

PIG-2990: the -secretDebugCmd shouldn't be a secret and should just be...a command (jcoveney)

PIG-2941: Ivy resolvers in pig don't have consistent chaining and don't have a kitchen sink option for novices (jgordon via azaroth)

PIG-2778: Add 'matches' operator to predicate pushdown (cheolsoo via jcoveney)

PIG-2966: Test failures on CentOS 6 because MALLOC_ARENA_MAX is not set (cheolsoo via sms)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-3084: Improve exceptions messages in POPackage (julien)
