@@ -17,7 +17,6 @@
  */
 package org.apache.pig.impl.util;
 
-import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
@@ -51,7 +50,6 @@ import org.apache.pig.impl.io.ReadToEndLoader;
 import org.apache.pig.impl.io.TFileStorage;
 import org.apache.pig.impl.logicalLayer.schema.Schema;
 import org.apache.pig.impl.logicalLayer.schema.Schema.FieldSchema;
-import org.apache.pig.newplan.logical.Util;
 import org.apache.pig.newplan.logical.relational.LogicalSchema;
 import org.apache.pig.parser.ParserException;
 import org.apache.pig.parser.QueryParserDriver;
@@ -62,7 +60,7 @@ import com.google.common.collect.Lists;
  * Class with utility static methods
  */
 public class Utils {
-	private static final Log log = LogFactory.getLog(Utils.class);
+    private static final Log log = LogFactory.getLog(Utils.class);
     /**
      * This method is a helper for classes to implement {@link java.lang.Object#equals(java.lang.Object)}
      * checks if two objects are equals - two levels of checks are
@@ -204,24 +202,26 @@ public class Utils {
         return getSchemaFromString(unwrappedSchemaString);
     }
 
-	public static LogicalSchema parseSchema(String schemaString) throws ParserException {
-		QueryParserDriver queryParser = new QueryParserDriver( new PigContext(), 
-        		"util", new HashMap<String, String>() ) ;
+    public static LogicalSchema parseSchema(String schemaString) throws ParserException {
+        QueryParserDriver queryParser = new QueryParserDriver( new PigContext(), 
+                "util", new HashMap<String, String>() ) ;
         LogicalSchema schema = queryParser.parseSchema(schemaString);
-		return schema;
-	}
-	
+        return schema;
+    }
+
     /**
      * This method adds FieldSchema of 'input source tag/path' as the first
      * field. This will be called only when PigStorage is invoked with
-     * '-tagsource' option and the schema file is present to be loaded.
+     * '-tagFile' or '-tagPath' option and the schema file is present to be
+     * loaded.
      * 
      * @param schema
+     * @param fieldName
      * @return ResourceSchema
      */
-    public static ResourceSchema getSchemaWithInputSourceTag(ResourceSchema schema) {
+    public static ResourceSchema getSchemaWithInputSourceTag(ResourceSchema schema, String fieldName) {
         ResourceFieldSchema[] fieldSchemas = schema.getFields();
-        ResourceFieldSchema sourceTagSchema = new ResourceFieldSchema(new FieldSchema("INPUT_FILE_NAME", DataType.CHARARRAY));
+        ResourceFieldSchema sourceTagSchema = new ResourceFieldSchema(new FieldSchema(fieldName, DataType.CHARARRAY));
         ResourceFieldSchema[] fieldSchemasWithSourceTag = new ResourceFieldSchema[fieldSchemas.length + 1];
         fieldSchemasWithSourceTag[0] = sourceTagSchema;
         for(int j = 0; j < fieldSchemas.length; j++) {
@@ -324,15 +324,15 @@ public class Utils {
     }
     
    public static InputStream getCompositeStream(InputStream in, Properties properties) {
-	   //Load default ~/.pigbootup if not specified by user
-    	final String bootupFile = properties.getProperty("pig.load.default.statements", System.getProperty("user.home") + "/.pigbootup");
-    	try {
-    	final InputStream inputSteam = new FileInputStream(new File(bootupFile));
-    	return new SequenceInputStream(inputSteam, in);
-    	} catch(FileNotFoundException fe) {
-    		log.info("Default bootup file " +bootupFile+ " not found");
-    		return in;
-    	}
+       //Load default ~/.pigbootup if not specified by user
+        final String bootupFile = properties.getProperty("pig.load.default.statements", System.getProperty("user.home") + "/.pigbootup");
+        try {
+        final InputStream inputSteam = new FileInputStream(new File(bootupFile));
+        return new SequenceInputStream(inputSteam, in);
+        } catch(FileNotFoundException fe) {
+            log.info("Default bootup file " +bootupFile+ " not found");
+            return in;
+        }
     }
 
     /**
